--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.1.5.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
