--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
     <description>elerning</description>
 
     <properties>
-        <java.version>11</java.version>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
     <dependencies>
