--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 #spring:
 #  datasource:
-#    url: jdbc:mysql://127.0.0.1:3306/e-lerning?serverTimezone=CET
+#    url: 
 #    username: root
-#    password: Nirvana88
+#    password: 
 #    driverClassName: com.mysql.cj.jdbc.Driver
 #  jpa:
 #    show-sql: true
